# intel-nfv-ci-tests

./: .gitignore  .gitreview  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
intel-nfv-ci-tests/: __init__.py
intel_nfv_ci_tests/: README.rst  __init__.py  config.py  exceptions.py  plugin.py
intel_nfv_ci_tests/integration/: test_cpu_pinning.py  test_hugepages.py  test_numa_topology.py
intel_nfv_ci_tests/tests/: utils.py
intel_nfv_ci_tests/tests/scenario/: manager.py  test_cpu_pinning.py  test_hugepages.py  test_numa_topology.py
tests/: test_intel-nfv-ci-tests.py  test_intel_nfv_ci_tests.py
