[metadata]
name = intel_nfv_ci_tests
summary = Repository containing tests for Intel NFV 3rd party CI
description-file = README.rst
classifier =
    Programming Language :: Python :: 2
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
keywords = intel nfv epa nova openstack
author = Intel Corporation
author-email = waldemar.znoinski@intel.com
project-url = https://github.com/openstack/intel-nfv-ci-tests

[entry_points]
tempest.test_plugins =
    intel-nfv-ci-tests = intel_nfv_ci_tests.plugin:IntelNFVPlugin

[wheel]
universal = 1

[pbr]
warnerrors = True
